<resources>
    <string name="app_name">OneCheck</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="loginLabel">Username</string>
    <string name="loginHint">Janedoe@abc.com</string>
    <string name="passwordLabel">Password</string>
    <string name="passwordHint">*******H</string>
    <string name="title_activity_item">ItemActivity</string>

    <string name="productLabel">Item Name</string>
    <string name="productHint">Concert Tickets</string>
    <string name="priceLabel">Price</string>
    <string name="priceHint">25.00</string>
    <string name="typeLabel">Category</string>
    <string name="typeHint">Entertainment</string>
    <string name="title_activity_result">ResultActivity</string>

    <string name="result">This is a bad purchase</string>
    <string name="result2">You are high risk</string>
    <string name="result3">You have bigger things to worry about</string>
    <string name="checkItem">Check Another Item</string>
    <string name="seeBank">See your Bank Account</string>
</resources>
