<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="20dip"
    android:paddingRight="20dip">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="140dp"
        android:maxHeight="140dp"
        android:layout_marginLeft="3dp"
        android:src="@drawable/capitalonelogo"
        android:paddingBottom="24dp"
        android:layout_gravity="center" />

    <ImageView
        android:id="@+id/image_advice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="160dp"
        android:maxHeight="160dp"
        android:layout_marginLeft="3dp"
        android:src="@drawable/no"
        android:paddingBottom="24dp"
        android:layout_gravity="center" />

    <TextView android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:layout_gravity="left"
        android:textSize="24dip"/>

    <TextView android:id="@+id/result2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result2"
        android:paddingTop="16dp"
        android:layout_gravity="left"
        android:textSize="24dip"/>

    <TextView android:id="@+id/result3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result3"
        android:paddingTop="16dp"
        android:layout_gravity="left"
        android:textSize="24dip"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <!--<ImageView-->
            <!--android:id="@+id/image_userr"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:adjustViewBounds="true"-->
            <!--android:maxWidth="100dp"-->
            <!--android:maxHeight="100dp"-->
            <!--android:layout_marginLeft="3dp"-->
            <!--android:src="@drawable/checkanotherproduct"-->
            <!--android:layout_gravity="center" />-->

        <Button
            android:id="@+id/checkItemBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="100dp"
            android:maxHeight="100dp"
            android:layout_gravity="center"
            android:background="#006699"
            android:textColor="#eeeeee"
            android:text="@string/checkItem"
            android:onClick="checkAgain"/>

        <Button
            android:id="@+id/seeBankBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="110dp"
            android:maxHeight="100dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:background="#006699"
            android:textColor="#eeeeee"
            android:text="@string/seeBank" />

        <!--<ImageView-->
            <!--android:id="@+id/image_user"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:adjustViewBounds="true"-->
            <!--android:maxWidth="100dp"-->
            <!--android:maxHeight="100dp"-->
            <!--android:layout_marginLeft="3dp"-->
            <!--android:foregroundGravity="left"-->
            <!--android:src="@drawable/seeyourbankaccount"-->
            <!--android:layout_gravity="center"-->
            <!--android:text="Yo"-->
            <!--android:textSize="20sp"/>-->
    </LinearLayout>

</LinearLayout>